[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/PerfectDOSVGA437.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Script/Game.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 29
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 28
use_filter = true
font_data = ExtResource( 1 )

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharactersContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 0.786
margin_bottom = 0.0800171
rect_clip_content = true
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.726
margin_left = -201.5
margin_right = 201.5
margin_bottom = 0.279968
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueBox" type="Panel" parent="."]
anchor_top = 0.726
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 77.0
margin_top = 0.279968
margin_right = -77.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="DialogueBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 10.0
margin_right = -1002.0
margin_bottom = -160.0
custom_fonts/font = SubResource( 1 )
text = "Test Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="DialogueBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 43.0
margin_right = -13.0
margin_bottom = -32.0
custom_fonts/normal_font = SubResource( 2 )
text = "fdfsfd"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
bus = "Music"
